connecting to postgres DB
