# dist/api.yml
@@ -4,12 +4,8 @@ info:
   description: API for  project
   version: 1.0.0
 tags:
-  - name: Users
   - name: Auth
-  - name: League
-  - name: Players
-  - name: Teams
-  - name: Games
+
 paths:
   /Register:
     post:
@@ -62,82 +58,6 @@ paths:
       responses:
         "200":
           description: "the user has ben successfully logged out"
-  /league/getDetails:
-    get:
-      tags:
-        - league
-      summary: Return the details about the current league
-      responses:
-        "200":
-          description: data about the current league returned
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/League"
-        "400":
-          description: wrong input parameters
-  /users/favoritePlayers:
-    get:
-      tags:
-        - Users
-        - Players
-      summary: Return the favorite players that were saved by user
-      parameters:
-      responses:
-        "200":
-          description: data about the user's favorites players returned
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/PlayerPreview"
-        "401":
-          description: user is not authorized
-    post:
-      summary: save player in the favorites list of a user
-      tags:
-        - Users
-        - Players
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                playerId:
-                  type: string
-                  description: player's id which the user saved
-                  example: 85
-      responses:
-        "201":
-          description: The player successfully saved as favorite
-        "401":
-          description: user is not authorized
-  /teams/teamFullDetails/{teamId}:
-    get:
-      summary: get full deatils about a team
-      description: useful for team page
-      tags:
-        - Teams
-      parameters:
-        - in: path
-          name: teamId
-          description: team's id
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: data about the team
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Team"
-        "404":
-          description: teamId is not exists
 components:
   schemas:
     User:
@@ -149,18 +69,6 @@ components:
           type: string
           description: username conatins between 3 to 8 letters only
           example: ladygaga
-        firstname:
-          type: string
-          description: user's first name
-          example: Stefani
-        lastname:
-          type: string
-          description: user's last name
-          example: Germanotta
-        country:
-          type: string
-          description: user's country
-          example: USA
         password:
           maxLength: 10
           minLength: 5
@@ -170,17 +78,6 @@ components:
             is a number and a special char
           format: password
           example: lady@56
-        email:
-          pattern: email
-          type: string
-          description: user's email
-          example: ladygaga@gmail.com
-        image-url:
-          pattern: URL
-          type: string
-          description: URL for the user's image
-          example: https://cloudinary.com/
-      description: Model containing user info
     LoginScheme:
       type: object
       properties:
@@ -197,50 +94,4 @@ components:
           format: password
           description: password conatins at least one number and one special char
           example: naor@55
-    League:
-      type: object
-      properties:
-        league_name:
-          type: string
-          description: league name
-          example: Superliga
-        current_season_name:
-          type: string
-          description: current season name
-          example: "2020/2021"
-        current_stage_name:
-          type: string
-          description: current stage name
-          example: Championship Round
-    PlayerPreview:
-      type: object
-      properties:
-        name:
-          type: string
-          description: player's name
-          example: Sten Michael Grytebust
-        image:
-          type: string
-          description: player's image
-          format: URL
-          example: https://cdn.sportmonks.com/images/soccer/players/11/84587.png
-        position:
-          type: integer
-          description: player's position in team
-          example: 1
-        team_name:
-          type: string
-          description: player's team name
-          example: København
-    Team:
-      type: object
-      properties:
-        name:
-          type: string
-          description: team name
-          example: København
-        players:
-          type: array
-          items:
-            type: object
-            $ref: "#/components/schemas/PlayerPreview"
+
